# Heat-Pump-Analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Notebook/: Data_Exploration.ipynb
data/proprietary/: .gitkeep
output/: .gitkeep
src/your_project_package/config/: config.py  filepaths.yaml  logging_config.yaml
